GH-945 Fix relocation updates. Support BOM dependency. Improve resolving dependencies  (#946)
* Fix relocation updates

* More fixes

* Run dependency scanner in parallel

* Close ExecutorService